--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/ZPSYQXPVJFGW3LTKHIAJRKIE4Y.png" alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="">
+                        <a class="destination-overlay text-white text-decoration-none" href="about.html">
                             <h5 class="text-white">Nuestra Historia</h5>
                         </a>
                     </div>
@@ -150,8 +150,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
-                        <img class="img-fluid" src="img/destination-4.jpg" alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="">
+                        <img class="img-fluid" src="img/dextar-vision-RdGio6Z-1uA-unsplash.jpg" alt="">
+                        <a class="destination-overlay text-white text-decoration-none" href="gastronomia.html">
                             <h5 class="text-white">Nuestra Gastronomía</h5>
                         </a>
                     </div>
@@ -159,7 +159,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src="img/destination-5.jpg" alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="">
+                        <a class="destination-overlay text-white text-decoration-none" href="Actividades.html">
                             <h5 class="text-white">Nuestras Actividades</h5>
                         </a>
                     </div>
@@ -248,46 +248,267 @@
     </div>
     <!-- About End -->
 
-    <!-- Service Start -->
+ <!-- Service Start -->
 <div class="container-fluid py-5">
   <div class="container pt-5 pb-3">
     <div class="text-center mb-3 pb-3">
-      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Services</h6>
-      <h1>Tours & Travel Services</h1>
+      <h6 class="text-primary text-uppercase" style="letter-spacing: 5px;">Servicios</h6>
+      <h1>Información importante</h1>
     </div>
 
-    <!-- clave: align-items-stretch y d-flex en las cols -->
     <div class="row align-items-stretch">
+      <!-- Ubicación -->
       <div class="col-lg-4 col-md-6 mb-4 d-flex">
-        <div class="service-item bg-white text-center mb-2 py-5 px-4 h-100 service-card">
+        <button class="service-item bg-white text-center mb-2 py-5 px-4 h-100 service-card w-100 border-0"
+                data-toggle="modal" data-target="#modalUbicacion" style="cursor:pointer;">
           <i class="fa fa-2x fa-route mx-auto mb-4"></i>
-          <h5 class="mb-2">Ubicacion</h5>
-          <p class="m-0">Miramar de Ansenuza se encuentra al noreste de la Provincia de Cordoba</p>
-        </div>
+          <h5 class="mb-2">Ubicación</h5>
+          <p class="m-0">Miramar de Ansenuza se encuentra al noreste de la Provincia de Córdoba.</p>
+        </button>
       </div>
 
+      <!-- Transporte -->
       <div class="col-lg-4 col-md-6 mb-4 d-flex">
-        <div class="service-item bg-white text-center mb-2 py-5 px-4 h-100 service-card">
-          <i class="fa fa-2x fa-ticket-alt mx-auto mb-4"></i>
+        <button class="service-item bg-white text-center mb-2 py-5 px-4 h-100 service-card w-100 border-0"
+                data-toggle="modal" data-target="#modalTransporte" style="cursor:pointer;">
+          <i class="fa fa-2x fa-bus mx-auto mb-4"></i>
           <h5 class="mb-2">Transporte</h5>
-          <p class="m-0">Conocé las principales empresas de colectivos que llegan a Miramar</p>
-        </div>
+          <p class="m-0">Conocé las empresas de colectivos que llegan a Miramar.</p>
+        </button>
       </div>
 
+      <!-- Teléfonos útiles -->
       <div class="col-lg-4 col-md-6 mb-4 d-flex">
-        <div class="service-item bg-white text-center mb-2 py-5 px-4 h-100 service-card">
-          <i class="fa fa-2x fa-hotel mx-auto mb-4"></i>
-          <h5 class="mb-2">Telefonos Utiles</h5>
-          <p class="m-0">Accedé a los contactos de la Oficina de Turismo, Policía, Hospital y servicios de emergencia</p>
-        </div>
+        <button class="service-item bg-white text-center mb-2 py-5 px-4 h-100 service-card w-100 border-0"
+                data-toggle="modal" data-target="#modalTelefonos" style="cursor:pointer;">
+          <i class="fa fa-2x fa-phone-alt mx-auto mb-4"></i>
+          <h5 class="mb-2">Teléfonos útiles</h5>
+          <p class="m-0">Oficina de Turismo, emergencias y más contactos.</p>
+        </button>
       </div>
     </div>
   </div>
 </div>
 
+<!-- ===== Modales ===== -->
 
-    <!-- Testimonial Start -->
-    
+<!-- Modal Ubicación -->
+<div class="modal fade" id="modalUbicacion" tabindex="-1" role="dialog" aria-labelledby="modalUbicacionLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-0 pb-0">
+        <h5 class="modal-title" id="modalUbicacionLabel">Ubicación — Miramar de Ansenuza</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body pt-2">
+        <p class="text-muted">
+          Miramar de Ansenuza está ubicada al noreste de la provincia de Córdoba, sobre la Laguna Mar Chiquita (Parque Nacional Ansenuza).
+        </p>
+        <div class="embed-responsive embed-responsive-16by9 rounded shadow-sm">
+          <iframe class="embed-responsive-item"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10791.23126674089!2d-62.681!3d-30.917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c7e8d9a6e4c9b5%3A0x7f9a3d2a6a4a1e2!2sMiramar%20de%20Ansenuza%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1700000000000"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <small class="d-block mt-2 text-muted">
+          Tip: Abrí el mapa en Google Maps para rutas y tiempo de viaje.
+        </small>
+      </div>
+      <div class="modal-footer border-0">
+        <a target="_blank" class="btn btn-primary"
+           href="https://www.google.com/maps/search/?api=1&query=Miramar+de+Ansenuza+C%C3%B3rdoba">
+          Ver en Google Maps
+        </a>
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Transporte -->
+<div class="modal fade" id="modalTransporte" tabindex="-1" role="dialog" aria-labelledby="modalTransporteLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-0 pb-0">
+        <h5 class="modal-title" id="modalTransporteLabel">Transporte — Empresas de colectivos</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body pt-2">
+        <ul class="list-unstyled">
+          <li class="mb-3">
+            <h6 class="mb-1"><i class="fa fa-bus mr-1 text-primary"></i> Morteros S.R.L</h6>
+            <div>Telefax: <a href="tel:+543562422470">03562–422470</a></div>
+            <div>E-mail: <a href="mailto:transportemorteros@coopmorteros.com.ar">transportemorteros@coopmorteros.com.ar</a></div>
+          </li>
+          <li class="mb-3">
+            <h6 class="mb-1"><i class="fa fa-bus mr-1 text-primary"></i> Empresa Fono Bus</h6>
+            <div>Teléfono: <a href="tel:+548108883666">0810 888 3666</a></div>
+            <div>E-mail: <a href="mailto:info@grupofonobus.com.ar">info@grupofonobus.com.ar</a></div>
+          </li>
+          <li class="mb-1">
+            <h6 class="mb-1"><i class="fa fa-bus mr-1 text-primary"></i> Empresa Mar Chiquita</h6>
+            <div>Teléfono: <a href="tel:+548102225202">0810 222 5202</a></div>
+            <div>WhatsApp: <a href="https://wa.me/54351152966496" target="_blank">0351-152966496</a></div>
+          </li>
+        </ul>
+      </div>
+      <div class="modal-footer border-0">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Teléfonos útiles (versión completa) -->
+<div class="modal fade" id="modalTelefonos" tabindex="-1" role="dialog" aria-labelledby="modalTelefonosLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header border-0 pb-0">
+        <h5 class="modal-title" id="modalTelefonosLabel">Teléfonos útiles — Miramar de Ansenuza</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <style>
+        .tel-grid {display:grid; grid-template-columns: repeat(2, 1fr); grid-gap:14px;}
+        .tel-item {background:#f8fafc; border-radius:12px; padding:14px; display:flex; align-items:flex-start; gap:12px;}
+        .tel-ico {font-size:1.4rem; line-height:1; color:#1d4ed8;}
+        .tel-title {margin:0; font-weight:600; color:#1e3a8a;}
+        .tel-lines small, .tel-lines a {display:block;}
+        .tel-lines a {text-decoration:none;}
+        .tel-lines a:hover {text-decoration:underline;}
+        @media (max-width: 575.98px){ .tel-grid{grid-template-columns:1fr;} }
+      </style>
+
+      <div class="modal-body pt-2">
+        <div class="tel-grid">
+          <!-- Municipalidad -->
+          <div class="tel-item">
+            <i class="fas fa-landmark tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Municipalidad de Miramar de Ansenuza</p>
+              <a href="tel:+543563493003">03563-493003</a>
+            </div>
+          </div>
+
+          <!-- Oficina de Informes Turísticos -->
+          <div class="tel-item">
+            <i class="fas fa-info-circle tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Oficina de Informes Turísticos</p>
+              <a href="tel:+543563493777">03563-493777</a>
+              <a href="tel:+543563409731">3563-409731</a>
+            </div>
+          </div>
+
+          <!-- Policía -->
+          <div class="tel-item">
+            <i class="fas fa-shield-alt tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Policía</p>
+              <a href="tel:+543563493299">03563-493299</a>
+              <a href="tel:+54356315406192">03563-15406192</a>
+              <a href="tel:101">101</a>
+            </div>
+          </div>
+
+          <!-- Bomberos -->
+          <div class="tel-item">
+            <i class="fas fa-fire-extinguisher tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Bomberos</p>
+              <a href="tel:+54356315409949">03563-15409949</a>
+              <a href="tel:+54356315412420">03563-15412420</a>
+              <a href="tel:101">101</a>
+            </div>
+          </div>
+
+          <!-- Hospital Zonal de Balnearia -->
+          <div class="tel-item">
+            <i class="fas fa-hospital tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Hosp. Zonal de Balnearia</p>
+              <a href="tel:+543563420158">03563-420158</a>
+            </div>
+          </div>
+
+          <!-- Dispensario Municipal -->
+          <div class="tel-item">
+            <i class="fas fa-briefcase-medical tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Dispensario Municipal</p>
+              <a href="tel:+543563493298">03563-493298</a>
+            </div>
+          </div>
+
+          <!-- Seguridad Náutica -->
+          <div class="tel-item">
+            <i class="fas fa-life-ring tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Seguridad Náutica</p>
+              <a href="tel:+543563493935">03563-493935</a>
+            </div>
+          </div>
+
+          <!-- G.E.R.S. -->
+          <div class="tel-item">
+            <i class="fas fa-star tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">G.E.R.S. — Grupo Especial de Rescate y Salvamento</p>
+              <a href="tel:+543563493935">03563-493935</a>
+            </div>
+          </div>
+
+          <!-- Parroquia Santa Teresita -->
+          <div class="tel-item">
+            <i class="fas fa-church tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Parroquia Santa Teresita</p>
+              <a href="tel:+543563493175">03563-493175</a>
+            </div>
+          </div>
+
+          <!-- Correo Argentino -->
+          <div class="tel-item">
+            <i class="fas fa-envelope tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Oficina de Correo Argentino</p>
+              <a href="tel:+543563493064">03563-493064</a>
+            </div>
+          </div>
+
+          <!-- Cooperativa Eléctrica -->
+          <div class="tel-item">
+            <i class="fas fa-bolt tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Cooperativa Eléctrica</p>
+              <a href="tel:+543563493078">03563-493078</a>
+            </div>
+          </div>
+
+          <!-- Cajero Automático / Red Link -->
+          <div class="tel-item">
+            <i class="fas fa-money-check-alt tel-ico"></i>
+            <div class="tel-lines">
+              <p class="tel-title">Cajero Automático — Red Link</p>
+              <small>Dirección: Buenos Aires 419</small>
+              <a href="tel:+543563493025">03563-493025</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal-footer border-0">
+        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <!-- Testimonial End -->
    <!-- Footer Start (limpio y en español) -->
 <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
